--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <input type="text" class="in in_name" placeholder="Name (Required)" required>
       <input type="email" class="in in_email" placeholder="Email (Required)" required>
       <input type="text" class="in in_sub" placeholder="Subject">
-      <textarea>Write your message here...</textarea>
+      <textarea placeholder="Write your message here..."></textarea>
       <input class="button" type="submit" value="SEND">
     </form>
     <div class="adr">
